fix: fix overflowing issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,4 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Outfit", sans-serif;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
